--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
+        "bootstrap": "^5.1.3",
         "webpack": "^5.65.0"
     }
 }
